--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
-group 'com.github.konwinkler'
-version '1.0-SNAPSHOT'
-
+apply plugin:'application'
 apply plugin: 'groovy'
+
+version = '1.0'
+mainClassName='game.Main'
+group 'com.github.konwinkler'
+
 
 repositories {
     mavenCentral()
@@ -11,4 +14,13 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     compile 'com.googlecode.lanterna:lanterna:3.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+task uberjar(type: Jar,dependsOn:[':compileJava',':compileGroovy']) {
+    from files('out/production/classes')
+    from configurations.runtime.asFileTree.files.collect { zipTree(it) }
+
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
 }
